fix contrast issues for links

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,10 +8,10 @@ a {
   text-decoration: none;
   position: relative;
   color: $green;
-  opacity: 1;
+  opacity: 0.9;
 
   &:hover {
-    opacity: 0.7;
+    opacity: 1;
   }
 }
 
@@ -150,7 +150,7 @@ a.block-link {
 
   &:hover {
     opacity: 1;
-    color: #38dc7c;
+    color: $black;
 
     &::before {
       width: calc(100% + 10px);
